Fix overflow of JS in blockly tooltip showing a non usable horizontal scrollbar.

--- a/theme/common.less
+++ b/theme/common.less
@@ -407,6 +407,8 @@ div.simframe > iframe {
     box-shadow: none !important;
     background-color: transparent !important;
     opacity: 1 !important;
+    /* wrap the JS text inside a blockly Tooltip */
+    overflow-wrap: break-word;
 }
 
 .blocklyToolboxDiv, .monacoToolboxDiv {
